// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search tests should match snapshot 1`] = `
<DocumentFragment>
  

.emotion-0 {
  font-family: VTEXTrustVF,-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  line-height: 1.25;
  font-variation-settings: 'wght' 92;
  font-size: 0.875rem;
}

.emotion-3 {
  position: relative;
}

.emotion-3 label {
  left: 44px;
}

.emotion-1 {
  min-width: 20px;
  min-height: 20px;
  width: 20px;
  height: 20px;
  color: #2953B2;
  top: 0.25rem;
  left: 0rem;
  margin-left: 0.75rem;
  margin-right: 0.75rem;
  margin-top: 14px;
  position: absolute;
}

.emotion-5 {
  font-family: VTEXTrustVF,-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'wght' 92;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  position: relative;
  text-transform: uppercase;
  color: #FFFFFF;
  background-color: #2953B2;
  font-size: 0.875rem;
  height: 40px;
  width: auto;
  padding-left: 1rem;
  padding-right: 1rem;
}

.emotion-5:focus:not([data-focus-visible-added]) {
  outline: none;
  box-shadow: none;
}

.emotion-5:focus {
  outline: none;
  box-shadow: 0rem 0rem 0rem 0.125rem #8DB6FA;
}

.emotion-5:hover {
  background-color: #214491;
}

.emotion-5:active {
  background-color: #1a3470;
}

.emotion-5:disabled {
  color: #323845;
  background-color: #C4C5CA;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  width: 100%;
  margin: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-2 {
  font-family: VTEXTrustVF,-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'wght' 92;
  width: 100%;
  height: 48px;
  border-style: solid;
  border-width: 1px;
  padding-left: 44px;
  padding-right: 1rem;
  border-color: #C4C5CA;
  border-radius: 4px;
  background-color: inherit;
  margin-top: 0.25rem;
  margin-bottom: 0.25rem;
  font-size: 0.875rem;
  color: #323845;
  outline: 0;
  -webkit-transition: all 70ms cubic-bezier(0.2, 0.2, 0.38, 0.9);
  transition: all 70ms cubic-bezier(0.2, 0.2, 0.38, 0.9);
}

.emotion-2:hover {
  border-color: #323845;
}

.emotion-2:focus {
  border-color: #2953B2;
  box-shadow: 0 0 0 1px #2953B2;
}

.emotion-2:disabled {
  background-color: #F4F6FB;
  border-color: #898F9E;
  color: #898F9E;
}

.emotion-2:focus+label {
  -webkit-transform: translate(1px, 4px) scale(0.875);
  -moz-transform: translate(1px, 4px) scale(0.875);
  -ms-transform: translate(1px, 4px) scale(0.875);
  transform: translate(1px, 4px) scale(0.875);
}

.emotion-2:placeholder-shown:not(:focus)+label {
  padding-top: 0.25rem;
}

.emotion-2:not(:placeholder-shown)+label {
  -webkit-transform: translate(1px, 4px) scale(0.875);
  -moz-transform: translate(1px, 4px) scale(0.875);
  -ms-transform: translate(1px, 4px) scale(0.875);
  transform: translate(1px, 4px) scale(0.875);
}

<form
    class="emotion-6"
    role="search"
  >
    <span
      style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 1px;"
    >
      <label
        class="emotion-0"
        for="search"
      >
        placeholder
      </label>
    </span>
    <div
      class="emotion-3"
    >
      <svg
        class="emotion-1"
        fill="none"
        viewBox="0 0 24 24"
      >
        <path
          clip-rule="evenodd"
          d="M15.6921 16.7489C12.9329 18.9787 8.87883 18.8112 6.31415 16.2466C3.57033 13.5027 3.57033 9.05413 6.31415 6.31031C9.05798 3.56649 13.5066 3.56649 16.2504 6.31031C18.8151 8.87498 18.9825 12.9291 16.7528 15.6883L19.5366 18.4721C19.8295 18.765 19.8295 19.2398 19.5366 19.5327C19.2437 19.8256 18.7688 19.8256 18.4759 19.5327L15.6921 16.7489ZM7.37481 7.37097C9.53285 5.21293 13.0317 5.21293 15.1898 7.37097C17.3277 9.5089 17.3476 12.9628 15.2495 15.1252C15.2275 15.1428 15.2063 15.1617 15.1859 15.1821C15.1656 15.2024 15.1466 15.2237 15.1291 15.2457C12.9666 17.3438 9.51274 17.3238 7.37481 15.1859C5.21678 13.0279 5.21678 9.52901 7.37481 7.37097Z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
      <input
        class="emotion-2"
        id="search"
        placeholder="placeholder"
        value=""
      />
    </div>
    <span
      style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 1px;"
    >
      <button
        class="emotion-5"
        type="submit"
      >
        <div
          class="emotion-4"
        >
          Search
        </div>
      </button>
    </span>
  </form>
</DocumentFragment>
`;

exports[`Search tests should match snapshot on loading 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  100% {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

@keyframes animation-1 {
  0% {
    stroke-dasharray: 1,150;
    stroke-dashoffset: 0;
  }

  50% {
    stroke-dasharray: 90,150;
    stroke-dashoffset: -35;
  }

  100% {
    stroke-dasharray: 90,150;
    stroke-dashoffset: -124;
  }
}



.emotion-0 {
  font-family: VTEXTrustVF,-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  line-height: 1.25;
  font-variation-settings: 'wght' 92;
  font-size: 0.875rem;
}

.emotion-4 {
  position: relative;
}

.emotion-4 label {
  left: 44px;
}

.emotion-6 {
  font-family: VTEXTrustVF,-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'wght' 92;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  position: relative;
  text-transform: uppercase;
  color: #FFFFFF;
  background-color: #2953B2;
  font-size: 0.875rem;
  height: 40px;
  width: auto;
  padding-left: 1rem;
  padding-right: 1rem;
}

.emotion-6:focus:not([data-focus-visible-added]) {
  outline: none;
  box-shadow: none;
}

.emotion-6:focus {
  outline: none;
  box-shadow: 0rem 0rem 0rem 0.125rem #8DB6FA;
}

.emotion-6:hover {
  background-color: #214491;
}

.emotion-6:active {
  background-color: #1a3470;
}

.emotion-6:disabled {
  color: #323845;
  background-color: #C4C5CA;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  width: 100%;
  margin: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-3 {
  font-family: VTEXTrustVF,-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'wght' 92;
  width: 100%;
  height: 48px;
  border-style: solid;
  border-width: 1px;
  padding-left: 44px;
  padding-right: 1rem;
  border-color: #C4C5CA;
  border-radius: 4px;
  background-color: inherit;
  margin-top: 0.25rem;
  margin-bottom: 0.25rem;
  font-size: 0.875rem;
  color: #323845;
  outline: 0;
  -webkit-transition: all 70ms cubic-bezier(0.2, 0.2, 0.38, 0.9);
  transition: all 70ms cubic-bezier(0.2, 0.2, 0.38, 0.9);
}

.emotion-3:hover {
  border-color: #323845;
}

.emotion-3:focus {
  border-color: #2953B2;
  box-shadow: 0 0 0 1px #2953B2;
}

.emotion-3:disabled {
  background-color: #F4F6FB;
  border-color: #898F9E;
  color: #898F9E;
}

.emotion-3:focus+label {
  -webkit-transform: translate(1px, 4px) scale(0.875);
  -moz-transform: translate(1px, 4px) scale(0.875);
  -ms-transform: translate(1px, 4px) scale(0.875);
  transform: translate(1px, 4px) scale(0.875);
}

.emotion-3:placeholder-shown:not(:focus)+label {
  padding-top: 0.25rem;
}

.emotion-3:not(:placeholder-shown)+label {
  -webkit-transform: translate(1px, 4px) scale(0.875);
  -moz-transform: translate(1px, 4px) scale(0.875);
  -ms-transform: translate(1px, 4px) scale(0.875);
  transform: translate(1px, 4px) scale(0.875);
}

.emotion-2 {
  min-width: 20px;
  min-height: 20px;
  width: 20px;
  height: 20px;
  color: #898F9E;
  top: 0.25rem;
  left: 0rem;
  margin-left: 0.75rem;
  margin-right: 0.75rem;
  margin-top: 14px;
  position: absolute;
  -webkit-animation: animation-0 1.5s linear infinite;
  animation: animation-0 1.5s linear infinite;
}

.emotion-1 {
  fill: none;
  stroke: #2953B2;
  stroke-width: 5;
  stroke-linecap: round;
  -webkit-animation: animation-1 1s ease-in-out infinite;
  animation: animation-1 1s ease-in-out infinite;
}

<form
    class="emotion-7"
    role="search"
  >
    <span
      style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 1px;"
    >
      <label
        class="emotion-0"
        for="search"
      >
        placeholder
      </label>
    </span>
    <div
      class="emotion-4"
    >
      <svg
        class="emotion-2"
        fill="none"
        focusable="false"
        viewBox="0 0 50 50"
      >
        <circle
          class="emotion-1"
          cx="25"
          cy="25"
          r="20"
        />
      </svg>
      <input
        class="emotion-3"
        id="search"
        placeholder="placeholder"
        value=""
      />
    </div>
    <span
      style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 1px;"
    >
      <button
        class="emotion-6"
        type="submit"
      >
        <div
          class="emotion-5"
        >
          Search
        </div>
      </button>
    </span>
  </form>
</DocumentFragment>
`;
